--- a/idol_story/movie_play/490/1_k.html
+++ b/idol_story/movie_play/490/1_k.html
@@ -61,7 +61,7 @@
     </style>
     <script type='text/javascript' src='../../../js/createjs.min.js'></script>
     <script type='text/javascript' src='../../../js/app_sound.js'></script>
-    <script type='text/javascript' src='../../../js/cjs/story_generator/story_generator_n1.js' crossorigin="anonymous"></script>
+    <script type='text/javascript' src='../../../js/cjs/story_generator/story_generator_n1_k.js' crossorigin="anonymous"></script>
     <script type='text/javascript' src='../../../js/cjs/story_generator/effects/eff_flower_red.js' crossorigin="anonymous"></script>
     <script type='text/javascript' src='../../../js/cjs/story_generator/effects/eff_chord.js' crossorigin="anonymous"></script>
     <script type='text/javascript' src='../../../js/cjs/story_generator/effects/eff_question.js' crossorigin="anonymous"></script>
@@ -137,7 +137,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "00001",
-                "message": "ﾌﾟﾛﾃﾞｭｰｻｰちゃま! おかえりな\nさいまし! まぁ､そんなに汗を\n掻いて……! 外は暑かったでし\nょう? 少し休みましょうか｡",
+                "message": "프로듀서 쨔마! 어서오세요!\n어머, 그렇게 땀을 흘리시다니……!\n바깥은 더웠지요?\n조금 쉴까요.",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
@@ -155,7 +155,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "……わたくしですか? 本日は\n事務所でみなさんと夏休みの\n宿題を……って､わたくしの\nことはよろしいのですわ!",
+                "message": "……저말인가요?\n오늘은 사무소에서 모두와 여름방학 숙제를……\n그래서, 저는 괜찮답니다!",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
@@ -173,7 +173,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "ﾌﾟﾛﾃﾞｭｰｻｰちゃまをお待ち\nしておりましたの! あなた､\n今日が何月何日かご存じ? \nそう! お盆ですのよ!?",
+                "message": "프로듀서 쨔마를 기다리고 있었어요!\n당신, 오늘이 몇월 며칠인지 아시나요?\n그래요! 오봉이에요!?",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
@@ -191,7 +191,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "常に多忙なわたくしの父とて､\nお盆にはお休みを取っており\nますのよ? ﾌﾟﾛﾃﾞｭｰｻｰちゃまも､\nご自愛くださいまし!",
+                "message": "항상 바쁘신 제 아빠도,\n오봉엔 휴가를 갖고 계신걸요?\n프로듀서 쨔마도, 몸조심하세요!",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
@@ -209,7 +209,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "もちろん､わたくしのためにと､\nいつもお忙しくされていること\nは嬉しいですわ｡けれど､無理は\nしてほしくありません｡",
+                "message": "물론, 저를 위해서,\n항상 바쁘게 계신 건 기뻐요.\n하지만, 무리는 하지 않았으면 좋겠어요.",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
@@ -227,7 +227,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "それに……せっかくわたくし\nがお休みなのに､ﾌﾟﾛﾃﾞｭｰｻｰ\nちゃまがお仕事では……\n少々寂しくもありますのよ?",
+                "message": "게다가……모처럼 제가 휴가인데요,\n프로듀서 쨔마가 일인 건……\n조금 외롭기도 해요?",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
@@ -245,34 +245,22 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "ですので……決めましたの! \nﾌﾟﾛﾃﾞｭｰｻｰちゃまには強制的\nに休んでいただきますわ! も\nちろん､わたくしと一緒に♪",
+                "message": "그래서…… 결정했어요!\n프로듀서 쨔마께는 강제적으로\n쉬게 해드리겠어요!\n물론, 저와 함께♪",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
             }],
-            "chara_list": {
-                "10112": {
-                    "master_id": "10112",
-                    "id": "10112",
-                    "name": "智絵里",
-                    "image_story": "10112.png",
-                    "image_icon": "10112.png",
-                    "other_chara_flg": "1"
-                }
-            },
-            "bg_list": ["00001"],
-            "effect_list": ["chord", "question"],
             "character_list": {
                 "10115": {
                     "id": 1,
                     "hash_id": "",
-                    "name": "桃華",
+                    "name": "모모카",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
                 }
             },
-            "title": "事務所",
+            "title": "사무소",
             "story_type": "3",
             "all_skip": "0",
             "logo_bg": ""
@@ -325,16 +313,16 @@
             "10115": {
                 "id": 1,
                 "hash_id": "",
-                "name": "桃華",
+                "name": "모모카",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
                 "face": ["1", "8", "7", "1", "3", "4", "5", "1"]
             }
         };
-        window.im_cjs.title_name = '事務所' || 'no_title';
+        window.im_cjs.title_name = '사무소' || 'no_title';
         window.im_cjs.event_type = '3' || 0;
-        window.im_cjs.jump_url = '../../../idol_gallery/idol_detail/momoka.html';
+        window.im_cjs.jump_url = '../../../idol_gallery/idol_detail/momoka_k.html';
         // createjsの演出が全て終了した場合の飛び先urlの定義
         window.im_cjs.chara_num = 1;
         window.im_cjs.voice_flag = 1;
