--- a/idol_story/movie_play/490/1_k.html
+++ b/idol_story/movie_play/490/1_k.html
@@ -245,7 +245,7 @@
                 "a_fade": "",
                 "": "",
                 "bgimg": "",
-                "message": "그래서…… 결정했어요!\n프로듀서 쨔마께는 강제적으로\n쉬게 해드리겠어요!\n물론, 저와 함께♪",
+                "message": "그래서…… 결정했어요!\n프로듀서 쨔마께 강제적으로\n쉬게 해드리겠어요!\n물론, 저와 함께♪",
                 "timing": "",
                 "auto": "1",
                 "sound_effect": ""
