--- a/last_cinderella_story/4.html
+++ b/last_cinderella_story/4.html
@@ -8466,71 +8466,71 @@
                 }
             }
             // 必要なキャラ画像を追加
-            window.chara_replace_images['c1_face1'] = '../image_sp/card/cm/f7433163489e0890602e32ce1d7ac700.png?6485579';
+            window.chara_replace_images['c1_face1'] = '../image_sp/card/cm/f7433163489e0890602e32ce1d7ac700.png';
             window.chara_replace_images['c1_b'] = '../image_sp/card/cm_face/f7433163489e0890602e32ce1d7ac700_b.png';
-            window.chara_replace_images['c2_face1'] = '../image_sp/card/cm/e254aad0347bd2ef9680f7313b26dbe9.png?4221835';
+            window.chara_replace_images['c2_face1'] = '../image_sp/card/cm/e254aad0347bd2ef9680f7313b26dbe9.png';
             window.chara_replace_images['c2_b'] = '../image_sp/card/cm_face/e254aad0347bd2ef9680f7313b26dbe9_b.png';
-            window.chara_replace_images['c3_face1'] = '../image_sp/card/cm/ac84c61ce8af6cbd8ecdb3099e87b29f.png?6673851';
+            window.chara_replace_images['c3_face1'] = '../image_sp/card/cm/ac84c61ce8af6cbd8ecdb3099e87b29f.png';
             window.chara_replace_images['c3_b'] = '../image_sp/card/cm_face/ac84c61ce8af6cbd8ecdb3099e87b29f_b.png';
-            window.chara_replace_images['c4_face1'] = '../image_sp/card/cm/c44c3c58ab6e06f5068b5c459cc5ecdc.png?6365948';
+            window.chara_replace_images['c4_face1'] = '../image_sp/card/cm/c44c3c58ab6e06f5068b5c459cc5ecdc.png';
             window.chara_replace_images['c4_b'] = '../image_sp/card/cm_face/c44c3c58ab6e06f5068b5c459cc5ecdc_b.png';
-            window.chara_replace_images['c5_face1'] = '../image_sp/card/cm/c33c2372ddc593434572ddc9265d64e4.png?6553807';
+            window.chara_replace_images['c5_face1'] = '../image_sp/card/cm/c33c2372ddc593434572ddc9265d64e4.png';
             window.chara_replace_images['c5_b'] = '../image_sp/card/cm_face/c33c2372ddc593434572ddc9265d64e4_b.png';
-            window.chara_replace_images['c6_face1'] = '../image_sp/card/cm/fd399f8c029ebfb373556f8a66d4d0a6.png?8668802';
+            window.chara_replace_images['c6_face1'] = '../image_sp/card/cm/fd399f8c029ebfb373556f8a66d4d0a6.png';
             window.chara_replace_images['c6_b'] = '../image_sp/card/cm_face/fd399f8c029ebfb373556f8a66d4d0a6_b.png';
-            window.chara_replace_images['c7_face1'] = '../image_sp/card/cm/5106e3a24d812aa9ed097708c9166f18.png?4630438';
+            window.chara_replace_images['c7_face1'] = '../image_sp/card/cm/5106e3a24d812aa9ed097708c9166f18.png';
             window.chara_replace_images['c7_b'] = '../image_sp/card/cm_face/5106e3a24d812aa9ed097708c9166f18_b.png';
-            window.chara_replace_images['c8_face1'] = '../image_sp/card/cm/40b0bf0485405d6fe0253371c92c0932.png?3288893';
+            window.chara_replace_images['c8_face1'] = '../image_sp/card/cm/40b0bf0485405d6fe0253371c92c0932.png';
             window.chara_replace_images['c8_b'] = '../image_sp/card/cm_face/40b0bf0485405d6fe0253371c92c0932_b.png';
-            window.chara_replace_images['c9_face1'] = '../image_sp/card/cm/27bae0d4009a858d08dced42005cdf25.png?2156405';
+            window.chara_replace_images['c9_face1'] = '../image_sp/card/cm/27bae0d4009a858d08dced42005cdf25.png';
             window.chara_replace_images['c9_b'] = '../image_sp/card/cm_face/27bae0d4009a858d08dced42005cdf25_b.png';
-            window.chara_replace_images['c10_face1'] = '../image_sp/card/cm/b0e88abd43d2e92070e87345604ba58e.png?6040739';
+            window.chara_replace_images['c10_face1'] = '../image_sp/card/cm/b0e88abd43d2e92070e87345604ba58e.png';
             window.chara_replace_images['c10_b'] = '../image_sp/card/cm_face/b0e88abd43d2e92070e87345604ba58e_b.png';
-            window.chara_replace_images['c11_face1'] = '../image_sp/card/cm/7c6d691dff4f6353fdf2ab67ccea3e35.png?2143861';
+            window.chara_replace_images['c11_face1'] = '../image_sp/card/cm/7c6d691dff4f6353fdf2ab67ccea3e35.png';
             window.chara_replace_images['c11_b'] = '../image_sp/card/cm_face/7c6d691dff4f6353fdf2ab67ccea3e35_b.png';
-            window.chara_replace_images['c12_face1'] = '../image_sp/card/cm/886f0d64d079d506d97861ff69384628.png?8854876';
+            window.chara_replace_images['c12_face1'] = '../image_sp/card/cm/886f0d64d079d506d97861ff69384628.png';
             window.chara_replace_images['c12_b'] = '../image_sp/card/cm_face/886f0d64d079d506d97861ff69384628_b.png';
-            window.chara_replace_images['c13_face1'] = '../image_sp/card/cm/fb4cc781aad74552c60bf5c8d1d8adb4.png?5798076';
+            window.chara_replace_images['c13_face1'] = '../image_sp/card/cm/fb4cc781aad74552c60bf5c8d1d8adb4.png';
             window.chara_replace_images['c13_b'] = '../image_sp/card/cm_face/fb4cc781aad74552c60bf5c8d1d8adb4_b.png';
-            window.chara_replace_images['c14_face1'] = '../image_sp/card/cm/a6d920d3f31459d45824b7c928a0773d.png?442446';
+            window.chara_replace_images['c14_face1'] = '../image_sp/card/cm/a6d920d3f31459d45824b7c928a0773d.png';
             window.chara_replace_images['c14_b'] = '../image_sp/card/cm_face/a6d920d3f31459d45824b7c928a0773d_b.png';
-            window.chara_replace_images['c15_face1'] = '../image_sp/card/cm/bf3ec532b8b71b11ee4ba7b11d320387.png?4142279';
+            window.chara_replace_images['c15_face1'] = '../image_sp/card/cm/bf3ec532b8b71b11ee4ba7b11d320387.png';
             window.chara_replace_images['c15_b'] = '../image_sp/card/cm_face/bf3ec532b8b71b11ee4ba7b11d320387_b.png';
-            window.chara_replace_images['c16_face1'] = '../image_sp/card/cm/b5c0174f4edd5af240e21e6da73fefa8.png?2741310';
+            window.chara_replace_images['c16_face1'] = '../image_sp/card/cm/b5c0174f4edd5af240e21e6da73fefa8.png';
             window.chara_replace_images['c16_b'] = '../image_sp/card/cm_face/b5c0174f4edd5af240e21e6da73fefa8_b.png';
-            window.chara_replace_images['c17_face1'] = '../image_sp/card/cm/d26c9bc0d05e37926124ab58583f7e5b.png?4774014';
+            window.chara_replace_images['c17_face1'] = '../image_sp/card/cm/d26c9bc0d05e37926124ab58583f7e5b.png';
             window.chara_replace_images['c17_b'] = '../image_sp/card/cm_face/d26c9bc0d05e37926124ab58583f7e5b_b.png';
-            window.chara_replace_images['c18_face1'] = '../image_sp/card/cm/65b1614f1d60f9654a0e57ed0e157409.png?3071173';
+            window.chara_replace_images['c18_face1'] = '../image_sp/card/cm/65b1614f1d60f9654a0e57ed0e157409.png';
             window.chara_replace_images['c18_b'] = '../image_sp/card/cm_face/65b1614f1d60f9654a0e57ed0e157409_b.png';
-            window.chara_replace_images['c19_face1'] = '../image_sp/card/cm/026b8304e404ec2921c8ac273b68c143.png?4815581';
+            window.chara_replace_images['c19_face1'] = '../image_sp/card/cm/026b8304e404ec2921c8ac273b68c143.png';
             window.chara_replace_images['c19_b'] = '../image_sp/card/cm_face/026b8304e404ec2921c8ac273b68c143_b.png';
-            window.chara_replace_images['c20_face1'] = '../image_sp/card/cm/78b8360d6690a2f7b903db3498861190.png?5545862';
+            window.chara_replace_images['c20_face1'] = '../image_sp/card/cm/78b8360d6690a2f7b903db3498861190.png';
             window.chara_replace_images['c20_b'] = '../image_sp/card/cm_face/78b8360d6690a2f7b903db3498861190_b.png';
-            window.chara_replace_images['c21_face1'] = '../image_sp/card/cm/a53f598eea9637e74b08e76c96d18d4b.png?548822';
+            window.chara_replace_images['c21_face1'] = '../image_sp/card/cm/a53f598eea9637e74b08e76c96d18d4b.png';
             window.chara_replace_images['c21_b'] = '../image_sp/card/cm_face/a53f598eea9637e74b08e76c96d18d4b_b.png';
-            window.chara_replace_images['c22_face1'] = '../image_sp/card/cm/9339d541ae9773d66dc5f54d175665de.png?5750959';
+            window.chara_replace_images['c22_face1'] = '../image_sp/card/cm/9339d541ae9773d66dc5f54d175665de.png';
             window.chara_replace_images['c22_b'] = '../image_sp/card/cm_face/9339d541ae9773d66dc5f54d175665de_b.png';
-            window.chara_replace_images['c23_face1'] = '../image_sp/card/cm/7a01f73afd6bf9881c91b0a2d4a37280.png?9832294';
+            window.chara_replace_images['c23_face1'] = '../image_sp/card/cm/7a01f73afd6bf9881c91b0a2d4a37280.png';
             window.chara_replace_images['c23_b'] = '../image_sp/card/cm_face/7a01f73afd6bf9881c91b0a2d4a37280_b.png';
-            window.chara_replace_images['c24_face1'] = '../image_sp/card/cm/1a5d7692d328fa114b177ebe5c427d0b.png?247836';
+            window.chara_replace_images['c24_face1'] = '../image_sp/card/cm/1a5d7692d328fa114b177ebe5c427d0b.png';
             window.chara_replace_images['c24_b'] = '../image_sp/card/cm_face/1a5d7692d328fa114b177ebe5c427d0b_b.png';
-            window.chara_replace_images['c25_face1'] = '../image_sp/card/cm/fcc7632df234939b950fa30f9c6c4eb0.png?3692788';
+            window.chara_replace_images['c25_face1'] = '../image_sp/card/cm/fcc7632df234939b950fa30f9c6c4eb0.png';
             window.chara_replace_images['c25_b'] = '../image_sp/card/cm_face/fcc7632df234939b950fa30f9c6c4eb0_b.png';
-            window.chara_replace_images['c26_face1'] = '../image_sp/card/cm/9960752141b9ff3b336b4a990351dfb0.png?3210842';
+            window.chara_replace_images['c26_face1'] = '../image_sp/card/cm/9960752141b9ff3b336b4a990351dfb0.png';
             window.chara_replace_images['c26_b'] = '../image_sp/card/cm_face/9960752141b9ff3b336b4a990351dfb0_b.png';
-            window.chara_replace_images['c27_face1'] = '../image_sp/card/cm/3a771aa484b1d4187bd8be115845649d.png?6460542';
+            window.chara_replace_images['c27_face1'] = '../image_sp/card/cm/3a771aa484b1d4187bd8be115845649d.png';
             window.chara_replace_images['c27_b'] = '../image_sp/card/cm_face/3a771aa484b1d4187bd8be115845649d_b.png';
-            window.chara_replace_images['c28_face1'] = '../image_sp/card/cm/5d22efb173d62d90f1aae3a13dbb281d.png?135868';
+            window.chara_replace_images['c28_face1'] = '../image_sp/card/cm/5d22efb173d62d90f1aae3a13dbb281d.png';
             window.chara_replace_images['c28_b'] = '../image_sp/card/cm_face/5d22efb173d62d90f1aae3a13dbb281d_b.png';
-            window.chara_replace_images['c29_face1'] = '../image_sp/card/cm/9e486396d32ff068967105a1eb7cd139.png?8069492';
+            window.chara_replace_images['c29_face1'] = '../image_sp/card/cm/9e486396d32ff068967105a1eb7cd139.png';
             window.chara_replace_images['c29_b'] = '../image_sp/card/cm_face/9e486396d32ff068967105a1eb7cd139_b.png';
-            window.chara_replace_images['c30_face1'] = '../image_sp/card/cm/9392cd6501637b7e2d621e7459fc742f.png?1673204';
+            window.chara_replace_images['c30_face1'] = '../image_sp/card/cm/9392cd6501637b7e2d621e7459fc742f.png';
             window.chara_replace_images['c30_b'] = '../image_sp/card/cm_face/9392cd6501637b7e2d621e7459fc742f_b.png';
-            window.chara_replace_images['c31_face1'] = '../image_sp/card/cm/62fbdf5d61178972214ab660b8b71541.png?8303511';
+            window.chara_replace_images['c31_face1'] = '../image_sp/card/cm/62fbdf5d61178972214ab660b8b71541.png';
             window.chara_replace_images['c31_b'] = '../image_sp/card/cm_face/62fbdf5d61178972214ab660b8b71541_b.png';
-            window.chara_replace_images['c32_face1'] = '../image_sp/card/cm/081496e77c44ec12dc3715d179d54aac.png?4184388';
+            window.chara_replace_images['c32_face1'] = '../image_sp/card/cm/081496e77c44ec12dc3715d179d54aac.png';
             window.chara_replace_images['c32_b'] = '../image_sp/card/cm_face/081496e77c44ec12dc3715d179d54aac_b.png';
-            window.chara_replace_images['c33_face1'] = '../image_sp/card/cm/2fc7aaa1afffe3a797b9f64b8fac0a1e.png?7538682';
+            window.chara_replace_images['c33_face1'] = '../image_sp/card/cm/2fc7aaa1afffe3a797b9f64b8fac0a1e.png';
             window.chara_replace_images['c33_b'] = '../image_sp/card/cm_face/2fc7aaa1afffe3a797b9f64b8fac0a1e_b.png';
             window.im_cjs.bg_frame_info = {
                 '2023012003': 0,
