--- a/last_cinderella_story/6.html
+++ b/last_cinderella_story/6.html
@@ -275,7 +275,7 @@
                 }, {
                     "id": "10",
                     "story_id": "9000601",
-                    "character_id": "",
+                    "character_id": "10101",
                     "cname": "全員",
                     "height_diff": "",
                     "face": "",
