--- a/last_cinderella_story/6.html
+++ b/last_cinderella_story/6.html
@@ -104,6 +104,8 @@
             // 読み込み開始
             load_js.loadManifest(window.js_load_files);
             var _effect_cnt = 8;
+			var image_server = "";
+			var base_url = "";
             window.im_cjs = window.im_cjs || {};
             window.replace_images = [];
             window.file_name = "story_generator_n40";
