--- a/last_cinderella_story/1.html
+++ b/last_cinderella_story/1.html
@@ -8984,7 +8984,7 @@
                 "10120": {
                     "id": 7,
                     "hash_id": "",
-                    "name": "\u512a",
+                    "name": "優",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -8992,7 +8992,7 @@
                 "10151": {
                     "id": 8,
                     "hash_id": "",
-                    "name": "\u90fd",
+                    "name": "都",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9000,7 +9000,7 @@
                 "10187": {
                     "id": 9,
                     "hash_id": "",
-                    "name": "\u983c\u5b50",
+                    "name": "頼子",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9008,7 +9008,7 @@
                 "10121": {
                     "id": 10,
                     "hash_id": "",
-                    "name": "\u611b\u6d77",
+                    "name": "愛海",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9016,7 +9016,7 @@
                 "10098": {
                     "id": 11,
                     "hash_id": "",
-                    "name": "\u30a2\u30c3\u30ad\u30fc",
+                    "name": "アッキー",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9024,7 +9024,7 @@
                 "10145": {
                     "id": 12,
                     "hash_id": "",
-                    "name": "\u6e05\u826f",
+                    "name": "清良",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9032,7 +9032,7 @@
                 "10114": {
                     "id": 13,
                     "hash_id": "",
-                    "name": "\u7f8e\u7531\u7d00",
+                    "name": "美由紀",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9040,7 +9040,7 @@
                 "10243": {
                     "id": 14,
                     "hash_id": "",
-                    "name": "\u307f\u308a\u3042",
+                    "name": "みりあ",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9048,7 +9048,7 @@
                 "10104": {
                     "id": 15,
                     "hash_id": "",
-                    "name": "\u821e",
+                    "name": "舞",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9056,7 +9056,7 @@
                 "10148": {
                     "id": 16,
                     "hash_id": "",
-                    "name": "\u82e5\u8449",
+                    "name": "若葉",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9064,7 +9064,7 @@
                 "10107": {
                     "id": 17,
                     "hash_id": "",
-                    "name": "\u4e9c\u91cc\u6c99",
+                    "name": "亜里沙",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9072,7 +9072,7 @@
                 "20210630": {
                     "id": 18,
                     "hash_id": "",
-                    "name": "\u308a\u3093\u3054\u308d\u3046",
+                    "name": "りんごろう",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9080,7 +9080,7 @@
                 "10304": {
                     "id": 19,
                     "hash_id": "",
-                    "name": "\u3042\u304b\u308a",
+                    "name": "あかり",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9088,7 +9088,7 @@
                 "10305": {
                     "id": 20,
                     "hash_id": "",
-                    "name": "\u3042\u304d\u3089",
+                    "name": "あきら",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9096,7 +9096,7 @@
                 "10247": {
                     "id": 21,
                     "hash_id": "",
-                    "name": "\u53cb\u7d00",
+                    "name": "友紀",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9104,7 +9104,7 @@
                 "10244": {
                     "id": 22,
                     "hash_id": "",
-                    "name": "\u6e1a",
+                    "name": "渚",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9112,7 +9112,7 @@
                 "10306": {
                     "id": 23,
                     "hash_id": "",
-                    "name": "\u308a\u3042\u3080",
+                    "name": "りあむ",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9120,7 +9120,7 @@
                 "10246": {
                     "id": 24,
                     "hash_id": "",
-                    "name": "\u552f",
+                    "name": "唯",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9128,7 +9128,7 @@
                 "10237": {
                     "id": 25,
                     "hash_id": "",
-                    "name": "\u85ab",
+                    "name": "薫",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9136,7 +9136,7 @@
                 "10135": {
                     "id": 26,
                     "hash_id": "",
-                    "name": "\u83f2\u83f2",
+                    "name": "菲菲",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9144,7 +9144,7 @@
                 "10156": {
                     "id": 27,
                     "hash_id": "",
-                    "name": "\u30cd\u30cd",
+                    "name": "ネネ",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9152,7 +9152,7 @@
                 "10202": {
                     "id": 28,
                     "hash_id": "",
-                    "name": "\u30b1\u30a4\u30c8",
+                    "name": "ケイト",
                     "offsetx": "0",
                     "offsety": "0",
                     "other_flg": "1"
@@ -9214,7 +9214,7 @@
                     "other_flg": "1"
                 }
             },
-            "title": "\u7b2c1\u8a71",
+            "title": "第1話",
             "story_type": "3",
             "all_skip": "0",
             "logo_bg": ""
@@ -9701,7 +9701,7 @@
             "10120": {
                 "id": 7,
                 "hash_id": "",
-                "name": "\u512a",
+                "name": "優",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9710,7 +9710,7 @@
             "10151": {
                 "id": 8,
                 "hash_id": "",
-                "name": "\u90fd",
+                "name": "都",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9719,7 +9719,7 @@
             "10187": {
                 "id": 9,
                 "hash_id": "",
-                "name": "\u983c\u5b50",
+                "name": "頼子",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9728,7 +9728,7 @@
             "10121": {
                 "id": 10,
                 "hash_id": "",
-                "name": "\u611b\u6d77",
+                "name": "愛海",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9737,7 +9737,7 @@
             "10098": {
                 "id": 11,
                 "hash_id": "",
-                "name": "\u30a2\u30c3\u30ad\u30fc",
+                "name": "アッキー",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9746,7 +9746,7 @@
             "10145": {
                 "id": 12,
                 "hash_id": "",
-                "name": "\u6e05\u826f",
+                "name": "清良",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9755,7 +9755,7 @@
             "10114": {
                 "id": 13,
                 "hash_id": "",
-                "name": "\u7f8e\u7531\u7d00",
+                "name": "美由紀",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9764,7 +9764,7 @@
             "10243": {
                 "id": 14,
                 "hash_id": "",
-                "name": "\u307f\u308a\u3042",
+                "name": "みりあ",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9773,7 +9773,7 @@
             "10104": {
                 "id": 15,
                 "hash_id": "",
-                "name": "\u821e",
+                "name": "舞",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9782,7 +9782,7 @@
             "10148": {
                 "id": 16,
                 "hash_id": "",
-                "name": "\u82e5\u8449",
+                "name": "若葉",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9791,7 +9791,7 @@
             "10107": {
                 "id": 17,
                 "hash_id": "",
-                "name": "\u4e9c\u91cc\u6c99",
+                "name": "亜里沙",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9800,7 +9800,7 @@
             "20210630": {
                 "id": 18,
                 "hash_id": "",
-                "name": "\u308a\u3093\u3054\u308d\u3046",
+                "name": "りんごろう",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9809,7 +9809,7 @@
             "10304": {
                 "id": 19,
                 "hash_id": "",
-                "name": "\u3042\u304b\u308a",
+                "name": "あかり",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9818,7 +9818,7 @@
             "10305": {
                 "id": 20,
                 "hash_id": "",
-                "name": "\u3042\u304d\u3089",
+                "name": "あきら",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9827,7 +9827,7 @@
             "10247": {
                 "id": 21,
                 "hash_id": "",
-                "name": "\u53cb\u7d00",
+                "name": "友紀",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9836,7 +9836,7 @@
             "10244": {
                 "id": 22,
                 "hash_id": "",
-                "name": "\u6e1a",
+                "name": "渚",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9845,7 +9845,7 @@
             "10306": {
                 "id": 23,
                 "hash_id": "",
-                "name": "\u308a\u3042\u3080",
+                "name": "りあむ",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9854,7 +9854,7 @@
             "10246": {
                 "id": 24,
                 "hash_id": "",
-                "name": "\u552f",
+                "name": "唯",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9863,7 +9863,7 @@
             "10237": {
                 "id": 25,
                 "hash_id": "",
-                "name": "\u85ab",
+                "name": "薫",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9872,7 +9872,7 @@
             "10135": {
                 "id": 26,
                 "hash_id": "",
-                "name": "\u83f2\u83f2",
+                "name": "菲菲",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9881,7 +9881,7 @@
             "10156": {
                 "id": 27,
                 "hash_id": "",
-                "name": "\u30cd\u30cd",
+                "name": "ネネ",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9890,7 +9890,7 @@
             "10202": {
                 "id": 28,
                 "hash_id": "",
-                "name": "\u30b1\u30a4\u30c8",
+                "name": "ケイト",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9899,7 +9899,7 @@
             "10308": {
                 "id": 29,
                 "hash_id": "",
-                "name": "\u5343\u591c",
+                "name": "千夜",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
@@ -9908,7 +9908,7 @@
             "10307": {
                 "id": 30,
                 "hash_id": "",
-                "name": "\u3061\u3068\u305b",
+                "name": "ちとせ",
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
