--- a/last_cinderella_story/6.html
+++ b/last_cinderella_story/6.html
@@ -8206,7 +8206,7 @@
                 "offsetx": "0",
                 "offsety": "0",
                 "other_flg": "1",
-                "face": ["1", "1", "2", "2"]
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
             },
             "10153": {
                 "id": 2,
@@ -8270,6 +8270,213 @@
                 "offsety": "0",
                 "other_flg": "1",
                 "face": ["1", "3", "7"]
+            },
+            "10255": {
+                "id": 9,
+                "hash_id": "",
+                "name": "美紗希",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "7"]
+            },
+            "10175": {
+                "id": 10,
+                "hash_id": "",
+                "name": "春菜",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3"]
+            },
+            "10172": {
+                "id": 11,
+                "hash_id": "",
+                "name": "千夏",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7"]
+            },
+            "10228": {
+                "id": 12,
+                "hash_id": "",
+                "name": "亜季",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7"]
+            },
+            "10165": {
+                "id": 13,
+                "hash_id": "",
+                "name": "美世",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7"]
+            },
+            "10166": {
+                "id": 14,
+                "hash_id": "",
+                "name": "晶葉",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7"]
+            },
+            "10138": {
+                "id": 15,
+                "hash_id": "",
+                "name": "雅",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10117": {
+                "id": 16,
+                "hash_id": "",
+                "name": "蓮実",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10233": {
+                "id": 17,
+                "hash_id": "",
+                "name": "茄子",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10300": {
+                "id": 18,
+                "hash_id": "",
+                "name": "イヴ",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10212": {
+                "id": 19,
+                "hash_id": "",
+                "name": "沙紀",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10286": {
+                "id": 20,
+                "hash_id": "",
+                "name": "真尋",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10264": {
+                "id": 21,
+                "hash_id": "",
+                "name": "そら",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10044": {
+                "id": 22,
+                "hash_id": "",
+                "name": "杏のうさぎ",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10124": {
+                "id": 23,
+                "hash_id": "",
+                "name": "こずえ",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10205": {
+                "id": 24,
+                "hash_id": "",
+                "name": "雪美",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10674": {
+                "id": 25,
+                "hash_id": "",
+                "name": "ペロ",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10274": {
+                "id": 26,
+                "hash_id": "",
+                "name": "夏美",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10236": {
+                "id": 27,
+                "hash_id": "",
+                "name": "芽衣子",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10199": {
+                "id": 28,
+                "hash_id": "",
+                "name": "惠",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10110": {
+                "id": 29,
+                "hash_id": "",
+                "name": "美里",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10116": {
+                "id": 30,
+                "hash_id": "",
+                "name": "椿",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
+            },
+            "10002": {
+                "id": 31,
+                "hash_id": "",
+                "name": "ちひろ",
+                "offsetx": "0",
+                "offsety": "0",
+                "other_flg": "1",
+                "face": ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
             }
         };
         window.im_cjs.title_name = '第6話' || 'no_title';
