--- a/mypage.html
+++ b/mypage.html
@@ -422,6 +422,8 @@
         <section class="t-Cnt">
             <a href='cinderella_history/main.html' class="banner_type_text" style="background-image:url(image_sp/banner/attraction/11525694598987e2a161918d9dac91a3.png)">
             </a>
+			<a href='last_cinderella_story/index.html' class="banner_type_text" style="background-image:url(image_sp/banner/attraction/c76cd3a4d44f9ca43d0aeafbe167051f.png)">
+            </a>
             <a href='refresh_room/index.html' class="banner_refresh_room"><img src='image_sp/ui/refresh_room/banner/25.png' class="banner_refresh_room_img">
                 <div class="banner_refresh_room_value">다시 보기
                 </div>
