--- a/last_cinderella_story/index_k.html
+++ b/last_cinderella_story/index_k.html
@@ -345,30 +345,30 @@
             <div class="last_story_header"></div>
             <div class="books_upper">
                 <div class="book1">
-                    <a href="1.html" class="book_btn1 jsOnDesignBtn"></a>
+                    <a href="1_k.html" class="book_btn1 jsOnDesignBtn"></a>
                 </div>
                 <div class="book2">
-                    <a href="2.html" class="book_btn2 jsOnDesignBtn"></a>
+                    <a href="2_k.html" class="book_btn2 jsOnDesignBtn"></a>
                 </div>
                 <div class="book3">
-                    <a href="3.html" class="book_btn3 jsOnDesignBtn"></a>
+                    <a href="3_k.html" class="book_btn3 jsOnDesignBtn"></a>
                 </div>
             </div>
             <div class="books_bottom">
                 <div class="book4 ">
-                    <a href="4.html" class="book_btn4 jsOnDesignBtn"></a>
+                    <a href="4_k.html" class="book_btn4 jsOnDesignBtn"></a>
                 </div>
                 <div class="book5">
-                    <a href="5.html" class="book_btn5 jsOnDesignBtn"></a>
+                    <a href="5_k.html" class="book_btn5 jsOnDesignBtn"></a>
                 </div>
                 <div class="book6">
-                    <a href="6.html" class="book_btn6 jsOnDesignBtn"></a>
+                    <a href="6_k.html" class="book_btn6 jsOnDesignBtn"></a>
                 </div>
             </div>
             <div class="desk_bottom"></div>
             <footer>
-                <a href='index_k.html'>
-                    <div class="backLink">한국어</div>
+                <a href='index.html'>
+                    <div class="backLink">일본어</div>
                 </a>
                 <a href='../mypage.html'>
                     <div class="backLink">マイスタジオ</div>
